fix: add media query to change menu-item margin on small screens

--- a/css/style.css
+++ b/css/style.css
@@ -188,6 +188,10 @@ hr {
   }
 }
 
+@media (max-width: 992px) {
+  .menu-item {
+    margin: 0;
+  }
 /* Home Carousel */
 
 .carousel-container {
